src/objects/ApexLogger__c.object
<CustomObject>
    <description>The custom object that could store the error details when processing Apex and Visualforce code.</description>
    <fields>
        <fullName>ClassName__c</fullName>
        <description>Name of the class that generated the error</description>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorDescription__c</fullName>
        <description>Description of the error</description>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FunctionName__c</fullName>
        <description>Name of the function that generated the error</description>
        <label>Function Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKIDApexLogger__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>Apx{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID ApexLogger</label>
        <type>AutoNumber</type>
    </fields>
    <label>Apex Logger</label>
    <nameField>
        <displayFormat>APEXLOG-{00000}</displayFormat>
        <label>Apex Logger Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Logger</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>